test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST__api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 27 May 2025 16:34:14 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="Y4hC7bIJnt8L7mdPdKjnAG6EyVLJKDht", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 4

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}